main.css
:root {
  --bg-level2: #3c3c3c;

  --color-hover: #ffffff;
  --hover-bgcolor: #f23825;

  --selected-color: #ffffff;
  --selected-bgcolor: #ff3a27;

  --button-selected-bgcolor: #ff3a27;

  --menu-header-bgcolor: #626262;
  --menu-header-color: #ffffff;
  --menu-header-border-color: #626262;

  --link-color: #f23825;

  --error-bgcolor: #f23825;
  --error-color: #ffffff;

  --important-bgcolor: #ffbe0d;
  --important-color: #000000;
  --tooltip-bgcolor: #ffbe0d;
  --tooltip-color: #000000;
  --table-data-border-color: #eee;
  --color-ready: #eeffd3;
}

@font-face {
  font-family: 'Usual';
  font-style: normal;
  font-weight: 400;
  src: local('Usual Regular'), local('Usual-Regular'), url('./fonts/Usual.woff2') format('woff2');
}

@font-face {
  font-family: 'Usual';
  font-style: normal;
  font-weight: 500;
  src: local('Usual Medium'), local('Usual-Medium'), url('./fonts/Usual_Medium.woff2') format('woff2');
}

@font-face {
  font-family: 'Usual';
  font-style: normal;
  font-weight: 700;
  src: local('Usual Bold'), local('Usual-Bold'), url('./fonts/Usual_Bold.woff2') format('woff2');
}

* {
  font-family: Usual, sans-serif;
}

html, body {
  height: 100%;
  font-size: 14px;
  margin: 0;
  padding: 0;
}

textarea, input, button, select {
  font-family: inherit;
  font-size: inherit;
}

input, textarea, select, .readOnlyInput {
  border:  0.5px solid #aaaaaa;
  padding: 2px;
}

input[readonly], textarea[readonly], .readOnlyInput {
  background-color: #cccccc;
  color: #000000;
}

a, .link {
  color: var(--link-color);
  font-family: inherit;
  text-decoration: none;
  cursor: pointer;
}
a:hover, .link:hover {
  text-decoration: underline;
}

figure {
  margin-left: 0;
}

.pageTitle {
  font-size: 30px;
  font-weight: 500;
  letter-spacing: -0.08em;
  white-space: nowrap;
}

#filterCountry {
  font-size: 14px;
  font-weight: 500;
  letter-spacing: -0.04em;
  white-space: nowrap;
  text-align: center;
  padding-right: 14px;
}

#largeTitle {
  display: flex;
  justify-content: center;
  font-size: 110px;
  font-weight: 500;
  letter-spacing: -0.08em;
  color: #fff;
}

#largeTitle:hover {
  text-decoration: none;
}

h1, .pageSubTitle {
  font-size: 20px;
  font-weight: normal;
  text-align: center;
  margin: 5px 0 10px 0;
}

h2, .pageSubTitleFont {
  font-size: 20px;
  font-weight: normal;
}

h3, .pageSubTitleFont {
  font-weight: normal;
}

.sectionIntro {
  margin-bottom: 15px;
}

.readMore {
  display: none;
  cursor: pointer;
  color: #fdae91;
}

.readMore:hover {
  text-decoration: underline;
}

.sectionCollapsed {
  display: -webkit-box;
  overflow: hidden;
  -webkit-line-clamp: 5;
  -webkit-box-orient: vertical;
}

.pageInner {
  width: 700px;
  max-width: 100%;
  box-sizing: border-box;
  margin: 0 auto;
  padding: 5px 10px;
}

.pageInnerScroll {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  overflow: auto;
}

#pageMain {
  display: flex;
  flex-direction: column;
  align-items: center;
  flex-grow: 1;
  overflow: auto;
  color: #fff;
  background-image: radial-gradient(farthest-corner at 0 0, #f23825 0%, black 60%);
}

.gradientBackground {
  color: #fff;
  background-image: radial-gradient(farthest-corner at 0 0, #f23825 0%, black 60%);
}

.scrollPage {
  display: flex;
  flex-direction: column;
  overflow: auto;
}

.flexToFullPage {
  display:   flex;
  flex-flow: column;
  height:    100%;
}

.cardCrash {
  position: relative;
  background-color: #ffffff;
  color: #000;
  padding: 10px;
  border: 1px solid #eee;
  margin-top: 10px;
}

.cardCrashDetails {
  margin-top: 0 !important;
}

.cardCrashClickable {
  cursor: pointer;
}

.cardCrashClickable:hover {
  background-color: #e3e3e3;
}

.cardTop {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-right: 5px;
}

.cardTitle {
  font-size: 18px;
  font-weight: 700;
  margin-bottom: 0.2em;
}

.cardTitleSmall {
  margin: 3px 0;
}

.articleTitleSmall {
  margin: 0 37px 3px 0;
}

.moderation {
  color: #ffffff;
  background-color: #1a4a75;
  padding: 3px;
  margin-bottom: 5px;
  text-align: center;
  cursor: default;
}

.cardIcons {
  display: flex;
  flex-direction: column;
  border: 1px solid #eeeeee;
  border-radius: 5px;
  padding: 2px;
}

.crashButton {
  display: inline-flex;
  flex-direction: row;
  align-items: center;
  margin-right: 3px;
  border: 1px solid #aaaaaa;
  border-radius: 3px;
  padding: 1px;
}

.defaultCursor {
  cursor: default;
}

.crashButtonSub {
  display: inline-flex;
  flex-direction: row;
  margin: 0 3px;
  border-radius: 5px;
  padding: 2px;
}

.crashPersonIcon {
  display: inline-flex;
  flex-direction: row;
  border: 1px solid #aaaaaa;
  border-radius: 5px;
  margin: 5px 3px 0 0;
  padding: 2px;
}

.cardArticle {
  position: relative;
  min-height: 80px;
  color: #000;
  margin: 10px 0;
  border: 1px solid #aaaaaa;
  border-radius: 10px;
}

.articleImage {
  width: 100%;
  max-height: 300px;
  object-fit: cover;
  overflow: hidden;
}

.articleImageWrapper {
  overflow: hidden;
}

.articleBody {
  padding: 5px;
}

.articleTitle {
  font-size: 16px;
  font-weight: bold;
  margin-bottom: 3px;
}

.formSubHeader {
  font-size: 15px;
  font-weight: bold;
  margin-top: 10px;
}

.postButtonArea {
  display: inline-block;
  position: absolute;
  top: 0;
  right: 0;
}

.buttonEditPost {
  display: inline-block;
  height: 20px;
  width: 15px;
  padding: 3px;
  cursor: pointer;
  opacity: 0.5;
  border-radius: 5px;
  background-size: 16px;
  background-position: center;
  background-repeat: no-repeat;
}

.iconSmall {
  display: flex;
  align-items: center;
  justify-content: center;
  color: #000000;
  outline: none;
  height: 18px;
  width: 18px;
  padding: 1px;
  margin: 0 1px;
  background-size: 17px;
  background-repeat: no-repeat;
  background-position: center;
}

.iconInput {
  height: 100%;
  width: 20px;
}
/* ... */

